<resources>
    <string name="app_name">INDO</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="don_t_remember_password_recover_it">Don\'t Remember Password? Recover It</string>
    <string name="or_login_with">Or Login With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="hi_nplease_login">Hi, \nPlease login</string>
    <string name="todo">TODO</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_up">Sign up</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="entre_password">Entre Password</string>
    <string name="name">Name</string>
    <string name="hi_nplease_sign_up">Hi \nPlease Sign Up</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="stores">Stores</string>
    <string name="diy">DIY</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_it_yourself">Do It Yourself!</string>
    <string name="todo6">TODO6</string>
    <string name="todo5">TODO5</string>
    <string name="todo4">TODO4</string>
    <string name="todo3">TODO3</string>
    <string name="todo2">TODO2</string>
    <string name="todo1">TODO1</string>
    <string name="canvas_wall_paintings_diy">Canvas Wall Paintings DIY</string>
    <string name="wall_art">Wall Art</string>
    <string name="wall_hangings">Wall Hangings</string>
    <string name="plant_wall_art">Plant Wall-Art</string>
    <string name="photo_wall_art">Photo Wall-Art</string>
    <string name="waste_to_best">Waste To Best</string>
    <string name="store">STORES</string>
    <string name="todoa">TODOa</string>
    <string name="todob">TODOb</string>
    <string name="todoc">TODOc</string>
    <string name="todod">TODOd</string>
    <string name="todoe">TODO</string>
    <string name="todof">TODOf</string>
    <string name="canvas_paintings">CANVAS PAINTINGS</string>
    <string name="get_started">Get Started</string>
    <string name="design_your_own_personalize_design_nfor_your_happening_place_for_free">Design your own personalize design \nfor your happening place for free</string>
    <string name="welcome_nto_indo">Welcome \nto INDO</string>
    <string name="todog">TODOg</string>
    <string name="guardian_of_the_sea_wall_art_nnicky_boehme_nprice_79_99">Guardian Of The Sea Wall Art \nNicky Boehme \nPrice $79.99</string>
    <string name="custom_portrait_painting_nmagicbrushdesign_nprice_59_95">Custom Portrait Painting \nMagicBrushDesign \nPrice $59.95</string>
    <string name="cortesi_home_forgiveness_nmario_sanchez_nprice_190">Cortesi Home \'Forgiveness\' \nMario Sanchez \nPrice $44.99</string>
    <string name="wieco_art_almond_blossom_floral_nvan_gogh_nprice_13_59">Wieco Art Almond Blossom Floral \nVan Gogh \nPrice $13.59</string>
    <string name="rustic_black_stallion_nethan_harper_nprice_79_99">Rustic Black \nStallion \nEthan Harper \nPrice $79.99</string>
    <string name="animal_wolf_wall_pictures_blue_sky_nprice_48_99">Animal Wolf Wall Pictures Blue Sky \nPrice $48.99</string>
    <string name="yellow_sunflower_artwork_still_life_canvas_art_prints_nprice_23_98">Yellow Sunflower Artwork Still Life Canvas Art Prints \nPrice $23.98</string>
    <string name="natvva_wall_art_callahan_sales_pitch_movie_poster_nprice_29_99">NATVVA Wall Callahan Sales Pitch Movie Poster \nPrice $29.99</string>
    <string name="photo_frames">PHOTO FRAMES</string>
    <string name="gallery_perfect_9_piece_black_square_photo_frame_nprice_63_07">Gallery Perfect 9 Piece Black Square Photo Frame \nPrice $63.07</string>
    <string name="wall_hanging_with_4_opening_white_frames_nprice_14_39">Wall Hanging with 4 Opening White Frames \nPrice $14.39</string>
    <string name="round_wooden_hanging_display_frames_nprice_22_49">Round Wooden Hanging Display Frames \nPrice $22.49</string>
    <string name="_6_wooden_wall_hanging_frames_with_27_clips_nprice_19_99">6 Wooden Wall Hanging Frames With 27 Clips \nPrice $19.99</string>
    <string name="family_tree_metal_multi_frames_round_circle_hanging_nprice_39_99">Family Tree Metal Multi Frames Round Circle Hanging \nPrice $39.99</string>
    <string name="_9_openings_handcrafted_wood_wall_hanging_frame_nprice_36_99">9 Openings Handcrafted Wood Wall Hanging Frame \nPrice $36.99</string>
    <string name="umbra_exhibit_picture_frame_adjustable_collage_nprice_56_39">Umbra Exhibit Picture Frame Adjustable Collage \nPrice $56.39</string>
    <string name="bikoney_picture_frames_collage_photo_hanging_nprice_16_99">Bikoney Picture Frames Collage Photo Hanging \nPrice $16.99</string>
</resources>